加入对泛型参数的支持，以及兜底的默认赋值

--- a/spring-boot-starter-web-boost-sample/src/resources/application.properties
+++ b/spring-boot-starter-web-boost-sample/src/resources/application.properties
@@ -1,3 +1,20 @@
 # 开启web-boost
 spring.web-boost.enable=true
+
+# server
 server.port=9090
+server.tomcat.max-http-form-post-size=30MB
+server.jetty.max-http-form-post-size = 30MB
+server.undertow.max-http-form-post-size = 30MB
+spring.http.multipart.max-file-size=-1
+spring.http.multipart.max-request-size=-1
+
+
+# 静态文件
+spring.web.resources.static-locations = file:static
+
+# json配置
+#spring.jackson.property-naming-strategy = SNAKE_CASE
+spring.jackson.date-format = yyyy-MM-dd HH:mm:ss
+spring.jackson.default-property-inclusion = ALWAYS
+spring.jackson.time-zone=GMT+8
